--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+* {
+    margin: 0px;
+    padding: 0px;
+    /* background-color: black; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* header file elements */
+
+.header {
+    display: flex;
+    flex-direction: row;
+    height: 60px;
+    align-items: center;
+    padding: 15px;
+    padding-left: 25px;
+    color: white;
+    background-image: linear-gradient(to right, rgb(223, 96, 50), rgb(223, 223, 69));
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-image {
+    height: 100%;
+    margin-right: 6px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.heading {
+    font-weight: 500;
+    margin-right: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.para {
+    margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* form page css */
+
+.form {
+    margin-top: 15px;
+    display: grid;
+    grid-template: 40px 40px / 1fr 1fr;
+    gap: 17px;
+    padding: 30px;
+    padding-top: 0px;
+
+}
+
+.form-input {
+
+    border-radius: 5px;
+    border: 1px solid #D5D4D8;
+    text-indent: 125px;
+
+}
+
+.form-button {
+    background-color: rgb(202, 151, 32);
+    grid-column: 1 / -1;
+    font-size: 1.20rem;
+    border-radius: 5px;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+/* Meme File CSS */
+
+
+.meme {
+    position: relative;
+    max-width: 23%;
+    max-height: 60%;
+    margin: auto;
+}
+
+.meme--image {
+    max-width: 400px;
+    max-height: 300px;
+    border-radius: 3px;
+}
+
+.meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
 }
